@@ -1,0 +1,1 @@
+interest /etc/ufw/applications.d
