@@ -205,8 +205,9 @@ After creating or editing an application profile, user's can run:
   ufw app update <name>
 
 This command will automatically update the firewall with updated profile
-information. To update a profile and add a new rule to the firewall
-automatically, user's can run:
+information. If specify 'all' for name, then all the profiles will be updated.
+To update a profile and add a new rule to the firewall automatically, user's
+can run:
 
   ufw app update --add-new <name>
 
