@@ -8,6 +8,10 @@ ufw (0.21) UNRELEASED; urgency=low
   * don't delete application rules when the action doesn't match
     (LP: #260881)
   * add reload command
+  * added debian/triggers and update debian/postinst for use with dpkg
+    triggers (thanks Colin Watson for the suggestion)
+  * add 'app update all' command
+  * update man page for reload and 'app update all'
 
  -- Jamie Strandboge <jamie@ubuntu.com>  Mon, 18 Aug 2008 20:22:32 -0400
 
